crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__begin_number.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: begin_number
---
BeginNumber {
    page: 1,
    foot_note: 1,
    end_note: 1,
    picture: 1,
    table: 1,
    equation: 1,
}
