crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__border_fill_gradation.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: border_fill
---
BorderFillType {
    id: 3,
    effect_3d: false,
    shadow: false,
    center_line: None,
    break_cell_separate_line: false,
    slash: Some(
        Slash {
            type: None,
            crooked: false,
            counter: false,
        },
    ),
    back_slash: Some(
        Slash {
            type: None,
            crooked: false,
            counter: false,
        },
    ),
    left_border: Some(
        BorderType {
            type: None,
            width: _0_1,
            color: RgbColor(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    right_border: Some(
        BorderType {
            type: None,
            width: _0_1,
            color: RgbColor(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    top_border: Some(
        BorderType {
            type: None,
            width: _0_1,
            color: RgbColor(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    bottom_border: Some(
        BorderType {
            type: None,
            width: _0_1,
            color: RgbColor(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    diagonal: Some(
        BorderType {
            type: Solid,
            width: _0_1,
            color: RgbColor(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    fill_brush: Some(
        Gradation(
            Gradation {
                type: Linear,
                angle: 90,
                center_x: 0,
                center_y: 0,
                step: 10,
                color_number: 2,
                step_center: 0,
                alpha: 0.0,
                colors: [
                    GradationColor {
                        value: RgbColor(
                            Some(
                                (
                                    255,
                                    255,
                                    255,
                                ),
                            ),
                        ),
                    },
                    GradationColor {
                        value: RgbColor(
                            Some(
                                (
                                    0,
                                    0,
                                    0,
                                ),
                            ),
                        ),
                    },
                ],
            },
        ),
    ),
}
