crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__bullet_type.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: bullet_type
---
BulletType {
    id: 1,
    character: "●",
    checked_character: Some(
        "■",
    ),
    use_image: false,
    image: Some(
        ImageType {
            binary_id_ref: "BINARY_ID_1",
            bright: 0,
            contrast: 0,
            effect: RealPicture,
            alpha: 0.0,
        },
    ),
    head: ParagraphHeadType {
        start: 1,
        level: 1,
        align: Left,
        use_inset_width: true,
        auto_indent: true,
        width_adjust: 0,
        text_offset_type: Percent,
        text_offset: 50,
        number_format: Digit,
        char_pr_id_ref: Some(
            4294967295,
        ),
        checkable: Some(
            false,
        ),
        text: Some(
            "●",
        ),
    },
}
