crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__char_shape.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: char_shape
---
CharShapeType {
    id: 0,
    height: 1000,
    text_color: RgbColorType(
        Some(
            (
                0,
                0,
                0,
            ),
        ),
    ),
    shade_color: RgbColorType(
        None,
    ),
    use_font_space: false,
    use_kerning: false,
    symbol_mark: None,
    border_fill_id_ref: Some(
        2,
    ),
    font_ref: FontReference {
        hangul: 4,
        latin: 4,
        hanja: 4,
        japanese: 4,
        other: 4,
        symbol: 4,
        user: 4,
    },
    ratio: Ratio {
        hangul: 100,
        latin: 100,
        hanja: 100,
        japanese: 100,
        other: 100,
        symbol: 100,
        user: 100,
    },
    spacing: Spacing {
        hangul: 0,
        latin: 0,
        hanja: 0,
        japanese: 0,
        other: 0,
        symbol: 0,
        user: 0,
    },
    relative_size: RelativeSize {
        hangul: 100,
        latin: 100,
        hanja: 100,
        japanese: 100,
        other: 100,
        symbol: 100,
        user: 100,
    },
    offset: Offset {
        hangul: 0,
        latin: 0,
        hanja: 0,
        japanese: 0,
        other: 0,
        symbol: 0,
        user: 0,
    },
    italic: true,
    bold: true,
    underline: Some(
        Underline {
            type: None,
            shape: None,
            color: RgbColorType(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    strikeout: Some(
        Strikeout {
            shape: None,
            color: RgbColorType(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
        },
    ),
    outline: Some(
        Outline {
            type: None,
        },
    ),
    shadow: Some(
        Shadow {
            type: None,
            color: RgbColorType(
                Some(
                    (
                        0,
                        0,
                        0,
                    ),
                ),
            ),
            offset_x: 0,
            offset_y: 0,
        },
    ),
    emboss: true,
    engrave: true,
    superscript: true,
    subscript: true,
}
