crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__compatible_document.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: compatible_document
---
CompatibleDocument {
    target_program: Hwp201X,
    layout_compatibility: LayoutCompatibility {
        set: {
            ApplyFontWeightToBold,
            DoNotFormattingAtBeneathAnchor,
            DoNotApplyVertOffsetOfForward,
            DoNotApplyShapeComment,
            DoNotApplyColSeparatorAtNoGap,
            DoNotApplyGridInHeaderFooter,
            DoNotAlignLastForbidden,
            AdjustVertPosOfLine,
            ApplyMinColumnWidthTo1mm,
            AdjustParaBorderOffsetWithBorder,
            DoNotApplyAutoSpaceEAsianNum,
            ApplyNextspacingOfLastPara,
            AdjustLineheightToFont,
            DoNotAdjustWordInJustify,
            TreatQuotationAsLatin,
            UseLowercaseStrikeout,
            UseInnerUnderline,
            AdjustBaselineOfObjectToBottom,
            ExtendVertLimitToPageMargins,
            DoNotAdjustEmptyAnchorLine,
            DoNotApplyLinegridAtNoLinespacing,
            ApplyExtendHeaderFooterEachSection,
            BaseLineSpacingOnLineGrid,
            DoNotApplyWhiteSpaceHeight,
            ApplyTabPosBasedOnSegment,
            ExtendLineheightToParaBorderOffset,
            AdjustParaBorderfillToSpacing,
            ApplyAtLeastToPercent100Pct,
            AdjustBaseInlineFixedLinespacing,
            BaseCharUnitOnEAsian,
            DoNotApplyDiacSymMarkOfNoneAndSix,
            ExtendLineheightToOffset,
            FixedUnderlineWidth,
            DoNotApplyExtensionCharCompose,
            DoNotHoldAnchorOfTable,
            OverlapBothAllowOverlap,
            DoNotApplyImageEffect,
            DoNotApplyHeaderFooterAtNoSpace,
            ApplyCharSpacingToCharGrid,
            DoNotAlignLastPeriod,
            BreakTabOverline,
            ApplyParaBorderToOutside,
            ConnectParaBorderfillOfEqualBorder,
            DoNotApplyAutoSpaceEAsianEng,
            ApplyPrevspacingBeneathObject,
            BaseCharUnitOfIndentOnFirstChar,
            DoNotAlignWhitespaceOnRight,
            ApplyFontspaceToLatin,
            DoNotApplyStrikeoutWithUnderline,
        },
    },
}
