crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__forbidden_words.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: forbidden_words
---
ForbiddenWordList {
    words: [
        "foo",
        "bar",
        "baz",
    ],
}
