crates/hwpx/src/namespace/snapshots/hwpx__namespace__head__tests__memo_shape_type.snap
---
source: crates/hwpx/src/namespace/head.rs
expression: memo_properties
---
MemoShapeType {
    id: 1,
    width: 2000,
    line_width: _0_25,
    line_type: Solid,
    line_color: RgbColor(
        Some(
            (
                255,
                0,
                0,
            ),
        ),
    ),
    fill_color: RgbColor(
        Some(
            (
                255,
                255,
                0,
            ),
        ),
    ),
    active_color: RgbColor(
        Some(
            (
                0,
                255,
                0,
            ),
        ),
    ),
    memo_type: Normal,
}
